Add a way to extract the charset and the position of the charset parameter from a content-type header.  Use this in XMLHttpRequest to not clobber the non-charset parameters and not clobber the charset if it's already what we'll set, up to case.  Apparently some broken servers are case-sensitive when looking at charsets!  Bug 393968 (wherein the patch lies) and bug 397234, r+sr=biesi